--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # SSL (Secure Sockets Layer) and its successor, TLS (Transport Layer Security), 
 # are protocols for establishing authenticated and encrypted links between networked computers.
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/great_bin?useSSL=false&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=pheil9chequaig7ahh4isaith1Yaej9c
+spring.datasource.url = jdbc:mysql://127.0.0.1:3307/great_bin?useSSL=false&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=db_app_user
+spring.datasource.password=mySuperSecretWeb
 
 # The dialect specifies the type of database used in hibernate so that hibernate generate 
 # appropriate type of SQL statements.
