--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
     		<artifactId>twilio</artifactId>
     		<version>7.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
